# tesis-kmp-v8-kampkit

./: .gitignore  index.html
.github/workflows/: impact-analysis.yml
gradle/: libs.versions.toml
pipeline/sbom/: .env.example
reports/io-insert-koin/4-2-0-to-4-2-1/run-24857480526/: index.html  summary.json
reports/io-insert-koin/4-2-0-to-4-2-1/run-24857480526/phase1/before/tools/kmp-impact-analyzer/: pyproject.toml
reports/io-insert-koin/4-2-0-to-4-2-1/run-24857480526/phase1/before/tools/kmp-impact-analyzer/tests/: test_core_algorithms.py  test_kotlin_parser.py
reports/io-insert-koin/4-2-0-to-4-2-1/run-24857480526/phase1/before/tools/kmp-impact-analyzer/tools/kmp-impact-analyzer/src/kmp_impact_analyzer/reporting/: __init__.py
reports/io-insert-koin/4-2-0-to-4-2-1/run-24857480526/phase1/before/tools/kmp-impact-analyzer/tools/kmp-impact-analyzer/tests/: test_expect_actual.py
reports/io-insert-koin/4-2-0-to-4-2-1/run-24857480526/phase1/before/tools/kmp-impact-analyzer/tools/kmp-impact-analyzer/tests/fixtures/sample_kotlin/: ExpectClass.kt
reports/io-insert-koin/4-2-0-to-4-2-1/run-24862291463/: index.html  summary.md
reports/io-ktor/3-4-2-to-3-4-3/run-24857758779/: index.html  summary.json  summary.md
reports/latest/: index.html
reports/org-jetbrains-kotlin/2-3-0-to-2-3-21/run-24857745783/: index.html  summary.json  summary.md
tools/kmp-impact-analyzer/src/kmp_impact_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/kmp-impact-analyzer/tests/: test_toml_parser.py
(+417 files in other folders)
